<resources>
    <string name="app_name">易安防技师端</string>
    <!--登录页-->
    <string name="read"><u>阅读协议</u></string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="user_register"><u>注册</u></string>
    <string name="user_login">登录</string>
    <!--工作台-->
    <string name="quick_work">快捷工作</string>
    <string name="WelcomeMessage">KTalk</string>
    <string name="login">登录</string>
    <string name="login_userName">姓名：</string>
    <string name="login_register">注册</string>
    <string name="main_conversation">会话</string>
    <string name="main_contacts">通讯录</string>
    <string name="main_setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="fr_setting">设置</string>
    <string name="fr_contact_invite">好友邀请</string>
    <string name="fr_contact_group">群组</string>
    <string name="act_add_friend">添加朋友</string>
    <string name="act_add_find">查找</string>
    <string name="act_add_name">名称</string>
    <string name="act_add_add">添加</string>
    <string name="invite_massage">邀请信息</string>
    <string name="item_invite_name">名称</string>
    <string name="item_invite_reason">原因</string>
    <string name="contact_delete">删除</string>
    <string name="main_chat">会话</string>

    <!-- 首页 -->
    <string name="text_worker_repair_order">报修订单</string>
    <string name="text_worker_install_order">报装订单</string>
    <string name="text_worker_design_order">设计订单</string>
    <string name="text_worker_maintain_order">维保订单</string>
    <string name="text_worker_inside_price">内部报价</string>
    <string name="text_worker_project_send">找工人</string>
    <string name="text_worker_project_receive">找活</string>
    <string name="text_worker_sign">签到</string>
    <string name="text_worker_tender">招标信息</string>
    <string name="text_worker_online">专家问答</string>

    <string name="text_new_order">最新订单</string>
    <string name="text_worker_create_project">创建项目</string>
    <string name="text_worker_log_work">施工日志</string>
    <string name="text_worker_project_change">工程变更</string>
    <string name="text_worker_apply_start">开工申请</string>
    <string name="text_worker_comein">人员入场</string>
    <string name="text_worker_progress">进度表</string>
    <string name="text_worker_accident">事故报告</string>
    <string name="text_worker_apply_check">验收申请</string>
    <string name="text_worker_check_safety">安全检查</string>

    <string name="text_worker_point_check">工作检查</string>
    <string name="text_worker_apply_goods">申请物资</string>
    <string name="text_worker_five_shop">五金店</string>
    <string name="text_worker_test">培训考试</string>
    <string name="text_worker_project_finish">竣工项目</string>
    <string name="text_worker_manual_repair">维修手册</string>
    <string name="text_worker_parts_library">配件库</string>

    <!--IM-->
    <string name="all_group_member">全部群成员</string>
    <string name="group_qrt">群二维码</string>
    <string name="group_name">群名称</string>
    <string name="group_announcement">群公告</string>
    <string name="quit_group">退出群</string>
    <string name="dismiss_group">解散</string>
    <string name="empty_group_notice">请编辑群公告</string>
    <string name="clean_message">清除聊天记录</string>
    <string name="message_notice">消息免打扰</string>
    <string name="set_top">会话置顶</string>
    <string name="group_notice_prefix">\@所有人\n</string>
    <string name="group_transfer">转让群主</string>
    <string name="group_shutup">全员禁言</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="string_repair_fault_detail">故障明细</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_portrait">群头像</string>
    <string name="title_activity_security_list">SecurityListActivity</string>

</resources>
