<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_40"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_30"
        android:text="项目管控"
        android:textColor="@color/color_client_neworder"
        android:textSize="@dimen/textSize_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_36"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_create_project"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_work_create_project"
            android:onClick="noOpen"
            android:text="@string/text_worker_create_project" />

        <TextView
            android:id="@+id/tv_work_log_work"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_log_work"
            android:onClick="noOpen"
            android:text="@string/text_worker_log_work" />

        <TextView
            android:id="@+id/tv_work_project_change"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_project_change"
            android:onClick="noOpen"
            android:text="@string/text_worker_project_change" />

        <TextView
            android:id="@+id/tv_work_apply_start"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_apply_start"
            android:onClick="noOpen"
            android:text="@string/text_worker_apply_start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_comein"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_comein"
            android:onClick="noOpen"
            android:text="@string/text_worker_comein" />

        <TextView
            android:id="@+id/tv_work_progress"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_progress"
            android:onClick="noOpen"
            android:text="@string/text_worker_progress" />

        <TextView
            android:id="@+id/tv_work_accident"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_accident"
            android:onClick="noOpen"
            android:text="@string/text_worker_accident" />

        <TextView
            android:id="@+id/tv_work_apply_check"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_apply_check"
            android:onClick="noOpen"
            android:text="@string/text_worker_apply_check" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_work_check_safety"
            style="@style/style_client_work_meun"
            android:drawableTop="@mipmap/ic_worker_project_receive"
            android:text="@string/text_worker_check_safety"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />
    </LinearLayout>
</LinearLayout>