<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/worker">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/act_add_friend"
            android:textColor="@android:color/white"
            android:textSize="25sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/input_search_bg"
            android:gravity="center"
            android:hint="输入电话号" />

        <ImageView
            android:id="@+id/iv_add_find"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:src="@drawable/ic_search" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_ll_selctor"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ease_default_avatar" />

        <TextView
            android:id="@+id/tv_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_add_photo"
            android:text="@string/act_add_name"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_add_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape"
            android:textColor="@color/white"
            android:text="@string/act_add_add" />
    </RelativeLayout>

</LinearLayout>
